tests/machine/x/hs/for_map_collection.error

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:107:10: error:
    Not in scope: type constructor or class ‘Aeson.ToJSON’
    NB: no module named ‘Aeson’ is imported.
    |
107 | instance Aeson.ToJSON AnyValue where
    |          ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:108:21: error:
    Not in scope: ‘Aeson.toJSON’
    NB: no module named ‘Aeson’ is imported.
    |
108 |   toJSON (VInt n) = Aeson.toJSON n
    |                     ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:109:24: error:
    Not in scope: ‘Aeson.toJSON’
    NB: no module named ‘Aeson’ is imported.
    |
109 |   toJSON (VDouble d) = Aeson.toJSON d
    |                        ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:110:24: error:
    Not in scope: ‘Aeson.toJSON’
    NB: no module named ‘Aeson’ is imported.
    |
110 |   toJSON (VString s) = Aeson.toJSON s
    |                        ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:111:22: error:
    Not in scope: ‘Aeson.toJSON’
    NB: no module named ‘Aeson’ is imported.
    |
111 |   toJSON (VBool b) = Aeson.toJSON b
    |                      ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:131:8: error:
    Not in scope: ‘Aeson.decode’
    NB: no module named ‘Aeson’ is imported.
    |
131 |   case Aeson.decode (BSL.pack text) of
    |        ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:131:22: error:
    Not in scope: ‘BSL.pack’
    NB: no module named ‘BSL’ is imported.
    |
131 |   case Aeson.decode (BSL.pack text) of
    |                      ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:132:11: error:
    Not in scope: data constructor ‘Aeson.Array’
    NB: no module named ‘Aeson’ is imported.
    |
132 |     Just (Aeson.Array arr) -> map _valueToMap (V.toList arr)
    |           ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:132:48: error:
    Not in scope: ‘V.toList’
    NB: no module named ‘V’ is imported.
    |
132 |     Just (Aeson.Array arr) -> map _valueToMap (V.toList arr)
    |                                                ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:136:16: error:
    Not in scope: type constructor or class ‘Aeson.Value’
    NB: no module named ‘Aeson’ is imported.
    |
136 | _valueToMap :: Aeson.Value -> Map.Map String String
    |                ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:137:14: error:
    Not in scope: data constructor ‘Aeson.Object’
    NB: no module named ‘Aeson’ is imported.
    |
137 | _valueToMap (Aeson.Object o) =
    |              ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:138:18: error:
    Not in scope: ‘T.unpack’
    NB: no module named ‘T’ is imported.
    |
138 |   Map.fromList [(T.unpack (Key.toText k), _valueToString v) | (k, v) <- KeyMap.toList o]
    |                  ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:138:28: error:
    Not in scope: ‘Key.toText’
    NB: no module named ‘Key’ is imported.
    |
138 |   Map.fromList [(T.unpack (Key.toText k), _valueToString v) | (k, v) <- KeyMap.toList o]
    |                            ^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:138:73: error:
    Not in scope: ‘KeyMap.toList’
    NB: no module named ‘KeyMap’ is imported.
    Suggested fix: Perhaps use ‘Map.toList’ (imported from Data.Map)
    |
138 |   Map.fromList [(T.unpack (Key.toText k), _valueToString v) | (k, v) <- KeyMap.toList o]
    |                                                                         ^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:141:19: error:
    Not in scope: type constructor or class ‘Aeson.Value’
    NB: no module named ‘Aeson’ is imported.
    |
141 | _valueToString :: Aeson.Value -> String
    |                   ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:142:17: error:
    Not in scope: data constructor ‘Aeson.String’
    NB: no module named ‘Aeson’ is imported.
    |
142 | _valueToString (Aeson.String s) = T.unpack s
    |                 ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:142:35: error:
    Not in scope: ‘T.unpack’
    NB: no module named ‘T’ is imported.
    |
142 | _valueToString (Aeson.String s) = T.unpack s
    |                                   ^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:143:17: error:
    Not in scope: data constructor ‘Aeson.Number’
    NB: no module named ‘Aeson’ is imported.
    |
143 | _valueToString (Aeson.Number n) = show n
    |                 ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:144:17: error:
    Not in scope: data constructor ‘Aeson.Bool’
    NB: no module named ‘Aeson’ is imported.
    |
144 | _valueToString (Aeson.Bool b) = if b then "true" else "false"
    |                 ^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:147:41: error:
    Not in scope: type constructor or class ‘Aeson.Value’
    NB: no module named ‘Aeson’ is imported.
    |
147 | _mapToValue :: Map.Map String String -> Aeson.Value
    |                                         ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:149:3: error:
    Not in scope: data constructor ‘Aeson.Object’
    NB: no module named ‘Aeson’ is imported.
    |
149 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |   ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:149:18: error:
    Not in scope: ‘KeyMap.fromList’
    NB: no module named ‘KeyMap’ is imported.
    Suggested fix: Perhaps use ‘Map.fromList’ (imported from Data.Map)
    |
149 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                  ^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:149:36: error:
    Not in scope: ‘Key.fromString’
    NB: no module named ‘Key’ is imported.
    |
149 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                                    ^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:149:54: error:
    Not in scope: data constructor ‘Aeson.String’
    NB: no module named ‘Aeson’ is imported.
    |
149 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                                                      ^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:149:68: error:
    Not in scope: ‘T.pack’
    NB: no module named ‘T’ is imported.
    |
149 |   Aeson.Object $ KeyMap.fromList [(Key.fromString k, Aeson.String (T.pack v)) | (k, v) <- Map.toList m]
    |                                                                    ^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:165:61: error:
    Not in scope: data constructor ‘Aeson.Array’
    NB: no module named ‘Aeson’ is imported.
    |
165 |               val = if length objs == 1 then head objs else Aeson.Array (V.fromList objs)
    |                                                             ^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:165:74: error:
    Not in scope: ‘V.fromList’
    NB: no module named ‘V’ is imported.
    Suggested fix: Perhaps use ‘Map.fromList’ (imported from Data.Map)
    |
165 |               val = if length objs == 1 then head objs else Aeson.Array (V.fromList objs)
    |                                                                          ^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:166:34: error:
    Not in scope: ‘BSL.unpack’
    NB: no module named ‘BSL’ is imported.
    |
166 |            in _writeOutput path (BSL.unpack (Aeson.encode val))
    |                                  ^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/for_map_collection.hs:166:46: error:
    Not in scope: ‘Aeson.encode’
    NB: no module named ‘Aeson’ is imported.
    |
166 |            in _writeOutput path (BSL.unpack (Aeson.encode val))
    |                                              ^^^^^^^^^^^^


Context around line 107:
  105| data AnyValue = VInt Int | VDouble Double | VString String | VBool Bool deriving (Show)
  106| 
  107| instance Aeson.ToJSON AnyValue where
  108|   toJSON (VInt n) = Aeson.toJSON n
  109|   toJSON (VDouble d) = Aeson.toJSON d
